# nexus-source

./: .gitignore  AGENTS.md  CLAUDE.md  ELECTRON_SETUP.md  INTEGRATION_SUMMARY.md  NEXUSAPI_SETUP.md  PERFORMANCE_OPTIMIZATION.md  PRODUCT_SPEC.md  README.md  REVIEW_2026-01-20.md  TAURI_SETUP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: build.yml  release.yml  tauri-build.yml  tauri-release.yml
.tasks/: 2026-01-25_1_canvas-refactor.md  2026-02-01_1_shortdrama-studio_editor.md
docs/: nexusAPI接口文档.md  云雾API接口文档.md
electron/: main.js  notarize.cjs  preload.js
public/: chos_camera_moves.json
src/: App.tsx  main.js  main.tsx  style.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.local.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: audio.d.ts  audio.js  chat.d.ts  chat.js  image.d.ts  image.js  index.d.ts  index.js  video.d.ts  video.js
src/components/: ApiSettings.vue  DirectorConsole.vue  DownloadModal.vue  HighPerfCanvas.vue  HistoryPanel.vue  ImageCropper.vue  PromptLibraryModal.vue  SettingsDialog.tsx  SketchEditor.vue  SmartSequenceDock.vue  SonicStudio.vue  UpdateChecker.tsx
src/config/: models.d.ts  models.js  nexusPrompt.ts  workflows.d.ts  workflows.js
src/graph/: hitTesting.ts  nodeSizing.ts  spatialIndex.ts  store.ts  types.ts
src/hooks/: index.js  useApi.js  useApiConfig.js  useChat.ts  useInView.ts  usePolish.js  useWorkflowOrchestrator.js  useWorkflowOrchestrator.ts
(+130 files in other folders)
